python/testData/highlighting/paramSpecWithBoundsReported.py
def foo[**P: <error descr="Parameter specifications cannot have constraints or upper bounds">str</error>](): ...